# Repairable-Error-Contract-Pattern-REC

./: CHANGELOG.md  CITATION.cff  GOVERNANCE.md  LICENSE.md  README.md  REVIEW-REMEDIATION.md  openapi.yaml  package-lock.json  package.json  pyproject.toml
.github/workflows/: test.yml  validate.yml
benchmarks/agent-recovery/: README.md
docs/: repository-metadata.md
examples/fastapi-middleware/: README.md
examples/generic-invoice-api/: README.md  valid-dependency-failure.rec.json  valid-missing-customer-id.rec.json  valid-semantic-precondition.rec.json
examples/invalid/: invalid-repair-patch-move-missing-from.rec.json  invalid-secret-leaking-diagnostic-capsule.json
examples/reddit-api/: README.md  diagnostic-capsule.example.json  valid-alias-field.rec.json  valid-rate-limit.rec.json  valid-share-url-repair-plan.rec.json
examples/status-catalog/: README.md
paper/: repairable-error-contract.md
schemas/: diagnostic-capsule.schema.json  repairable-problem.schema.json
spec/: rec-v0.1.md
src/rec/: __init__.py  deterministic.py  fastapi.py  json_patch.py  policy_gate.py  schema_loader.py
tests/: test_json_patch.py  test_policy_gate.py  test_retry_semantics.py  test_schema_validation.py  validate-examples.mjs
